--- a/30.保护继承和私有继承/30.保护继承和私有继承/30.保护继承和私有继承.vcxproj
+++ b/30.保护继承和私有继承/30.保护继承和私有继承/30.保护继承和私有继承.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{90508E49-C184-45AE-A6D8-6FC66283D827}</ProjectGuid>
-    <RootNamespace>My29公有继承</RootNamespace>
+    <ProjectGuid>{17284366-4F80-4580-AA32-11E3F538C0D0}</ProjectGuid>
+    <RootNamespace>My30保护继承和私有继承</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,12 +115,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Image Include="C:\Users\ADMINI~1\AppData\Local\Temp\私有继承.jpg" />
+    <Image Include="C:\Users\ADMINI~1\AppData\Local\Temp\保护继承.jpg" />
+    <Image Include="C:\Users\ADMINI~1\AppData\Local\Temp\公有继承.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="demo.cpp" />
+    <ClCompile Include="Infantry.cpp" />
     <ClCompile Include="Person.cpp" />
+    <ClCompile Include="Soldier.cpp" />
     <ClCompile Include="Worker.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Infantry.h" />
     <ClInclude Include="Person.h" />
+    <ClInclude Include="Soldier.h" />
     <ClInclude Include="Worker.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
