--- a/31.isA/31.isA/31.isA.vcxproj.filters
+++ b/31.isA/31.isA/31.isA.vcxproj.filters
@@ -18,7 +18,13 @@
     <ClCompile Include="demo.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Infantry.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="Person.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Soldier.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Worker.cpp">
@@ -26,7 +32,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Infantry.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
     <ClInclude Include="Person.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Soldier.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Worker.h">
