Signed-off-by: cjy513203427 <634208959@qq.com>

--- a/41.友元函数编码实现/41.友元函数编码实现/41.友元函数编码实现.vcxproj
+++ b/41.友元函数编码实现/41.友元函数编码实现/41.友元函数编码实现.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{23B24021-5202-4D80-A47D-5B568A933218}</ProjectGuid>
-    <RootNamespace>深拷贝和浅拷贝</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectGuid>{580A76F4-3F92-49A7-8EE6-24D69F91025B}</ProjectGuid>
+    <RootNamespace>My41友元函数编码实现</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,11 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Array.cpp" />
-    <ClCompile Include="源.cpp" />
+    <ClInclude Include="Match.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Array.h" />
+    <ClCompile Include="Match.cpp" />
+    <ClCompile Include="Time.cpp" />
+    <ClCompile Include="源.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
