Signed-off-by: cjy513203427 <634208959@qq.com>

--- a/51.队列/51.队列/51.队列.vcxproj
+++ b/51.队列/51.队列/51.队列.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{C2A6D5B2-78F0-4EFD-BD6E-B15CBAA9C81A}</ProjectGuid>
-    <RootNamespace>My24常指针与常引用练习</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectGuid>{16D091F7-3613-469C-80EF-DF19460168D7}</ProjectGuid>
+    <RootNamespace>My51队列</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,7 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MyQueue.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MyQueue.cpp" />
     <ClCompile Include="源.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\hasee\AppData\Local\Temp\环形队列.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
