--- a/58.背包问题/58.背包问题/58.背包问题.vcxproj
+++ b/58.背包问题/58.背包问题/58.背包问题.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{1444DC7A-A114-432B-BF40-4B6A455FE598}</ProjectGuid>
-    <RootNamespace>My35虚析构函数</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectGuid>{D05FD6DD-8BBA-4EF0-8846-EEB26315E1C6}</ProjectGuid>
+    <RootNamespace>My58背包问题</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,17 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Circle.cpp" />
-    <ClCompile Include="Coordinate.cpp" />
-    <ClCompile Include="Rect.cpp" />
-    <ClCompile Include="Shape.cpp" />
     <ClCompile Include="源.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Circle.h" />
-    <ClInclude Include="Coordinate.h" />
-    <ClInclude Include="Rect.h" />
-    <ClInclude Include="Shape.h" />
+    <ClInclude Include="Solution.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
