--- a/60.二叉排序树/60.二叉排序树/60.二叉排序树.vcxproj
+++ b/60.二叉排序树/60.二叉排序树/60.二叉排序树.vcxproj
@@ -115,12 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="binarySearchTree.h" />
-    <ClInclude Include="binarySearchTree.impl.h" />
-    <ClInclude Include="generic.h" />
+    <ClInclude Include="BSTree.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="源.cpp" />
+    <ClCompile Include="BSTree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
